feat: update prompts

--- a/notebook.ipynb/imagen.ipynb
+++ b/notebook.ipynb/imagen.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ImagesResponse(created=1714036525, data=[Image(b64_json=None, revised_prompt='Illustrate an adventurous young journalist with a quiff of blonde hair and a petite white canine, engaged in the exciting pursuit of solving mysteries in the bustling cityscape of Tokyo. The style should be defined by bold, unambiguous lines and vibrant hues, expressing the essence of European comic books from the mid-20th century. Incorporate elements of broad and exaggerated features, uncluttered scenes, and vivid colour-palettes, a nod to the simplicity and directness used in early comics.', url='https://oaidalleapiprodscus.blob.core.windows.net/private/org-p2mmh9H1Y7iCwS3cE78HSEmC/user-nJjTJvxJPFtJyFQykcr4NHIw/img-SUQgxw1VbOppDrR6HbiGgYzp.png?st=2024-04-25T08%3A15%3A25Z&se=2024-04-25T10%3A15%3A25Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-24T19%3A17%3A07Z&ske=2024-04-25T19%3A17%3A07Z&sks=b&skv=2021-08-06&sig=9ZOlquklwLhrjHZDmlVhkm73WZ/Cxka4/OjVpJ7MgR4%3D')])\n",
-      "Generated Image URL: https://oaidalleapiprodscus.blob.core.windows.net/private/org-p2mmh9H1Y7iCwS3cE78HSEmC/user-nJjTJvxJPFtJyFQykcr4NHIw/img-SUQgxw1VbOppDrR6HbiGgYzp.png?st=2024-04-25T08%3A15%3A25Z&se=2024-04-25T10%3A15%3A25Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-24T19%3A17%3A07Z&ske=2024-04-25T19%3A17%3A07Z&sks=b&skv=2021-08-06&sig=9ZOlquklwLhrjHZDmlVhkm73WZ/Cxka4/OjVpJ7MgR4%3D\n"
+      "Sam (a young lion) and his parents (also lions, but older) sitting with Dr. Fox (a wise fox, doctor, aged, serious) discussing treatment options in a comforting hospital room.,\n",
+      "ImagesResponse(created=1714053621, data=[Image(b64_json=None, revised_prompt=\"A landscape-oriented black and white pencil drawing capturing a scene from a children's book. The essence of innocent storytelling similar to pre-1912 children's book illustrators is depicted. The focus is on young lion, Sam, and his mature lion parents, engaged in a profound conversation with Dr. Fox, characterized as an aged, wise fox. They all are comfortably seated in a well-equipped hospital room that exudes ease and warmth, discussing various treatment options.\", url='https://oaidalleapiprodscus.blob.core.windows.net/private/org-p2mmh9H1Y7iCwS3cE78HSEmC/user-nJjTJvxJPFtJyFQykcr4NHIw/img-E5F2F9WImpPZLSCoerbifEwZ.png?st=2024-04-25T13%3A00%3A21Z&se=2024-04-25T15%3A00%3A21Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-24T19%3A12%3A55Z&ske=2024-04-25T19%3A12%3A55Z&sks=b&skv=2021-08-06&sig=%2BmajYOc7n4s7ZRNJlDrpFE34LUpeE3q/TSWEY9H6yms%3D')])\n",
+      "Generated Image URL: https://oaidalleapiprodscus.blob.core.windows.net/private/org-p2mmh9H1Y7iCwS3cE78HSEmC/user-nJjTJvxJPFtJyFQykcr4NHIw/img-E5F2F9WImpPZLSCoerbifEwZ.png?st=2024-04-25T13%3A00%3A21Z&se=2024-04-25T15%3A00%3A21Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-04-24T19%3A12%3A55Z&ske=2024-04-25T19%3A12%3A55Z&sks=b&skv=2021-08-06&sig=%2BmajYOc7n4s7ZRNJlDrpFE34LUpeE3q/TSWEY9H6yms%3D\n"
      ]
     }
    ],
@@ -20,23 +21,37 @@
     "client = openai.OpenAI(api_key=\"\")\n",
     "\n",
     "# Function to generate an image using OpenAI's DALL-E\n",
-    "def generate_image(prompt):\n",
-    "    # Replace 'your_api_key_here' with your actual OpenAI API key\n",
+    "def generate_image(prompt):    \n",
+    "    prompts = [\n",
+    "       \"Sam, a young lion, smiling and playing with a football.,\",\n",
+    "      \"Sam, Luuk (a young lion), and Eddy (a young bear) playing together in the mountains.,\",\n",
+    "      \"Sam (a young lion) embraced by his parents, John (a strong lion) and Mary (a gentle lioness).,\",\n",
+    "      \"Sam (a young lion) sitting in a car with his parent driving, heading towards the hospital.,\",\n",
+    "      \"Sam (a young lion) meeting Dr. Fox (a friendly fox) in a cozy hospital setting.,\",\n",
+    "      \"Sam (a young lion) and his parents sitting with Dr. Fox (a wise fox) discussing treatment options in a comforting hospital room.,\",\n",
+    "      \"Sam (a young lion) scratching his head with a puzzled expression, surrounded by question marks.,\",\n",
+    "      \"Sam (a young lion) sitting in the car, looking out the window with a thoughtful expression, with a cloud above his head filled with variousthoughts.,\",\n",
+    "      \"Sam (a young lion) hiking through a lush forest path with his friends and family, including Luuk (a young lion) and Eddy (a young bear).,\",\n",
+    "      \"Sam (a young lion) standing at the beginning of a challenging path, looking determined with a brave expression, ready to face his journey.,\",\n",
+    "      \"A menacing castle in the distance, representing the challenge of Leukemia as a monstrous figure looming within.,\",\n",
+    "      \"Sam (a young lion) receiving a shiny sword from Dr. Fox (a wise fox), symbolizing chemotherapy as a powerful weapon against the monster of Leukemia.,\",\n",
+    "      \"Dr. Fox (a wise fox) handing a shiny sword to Sam (a young lion), with a reassuring smile, promising strength and support in the battle against Leukemia.,\",\n",
+    "      \"Sam (a young lion) embracing Luuk (a young lion) and Eddy (a young bear) with a joyful reunion at home, symbolizing Sam's readiness to face hisjourney with the support of his loved ones.\"]\n",
     "    \n",
-    "\n",
-    "    # Calling the DALL-E model to generate an image from the prompt\n",
-    "    response = client.images.generate(\n",
-    "      model=\"dall-e-3\",\n",
-    "      prompt=\"Illustrate a young adventurous reporter with quiffed blonde hair and a small white dog, solving mysteries in an tokyo. The style should feature bold, clear lines and vibrant colors, reminiscent of mid-20th century European comic books. Use tintin style\",\n",
-    "      size=\"1024x1024\",\n",
-    "      quality=\"standard\",\n",
-    "      n=1,\n",
-    "    )\n",
-    "\n",
+    "    for i in prompts:\n",
+    "      print(i)\n",
+    "      response = client.images.generate(\n",
+    "        model=\"dall-e-3\",\n",
+    "        prompt=\"A landscape-oriented pencil drawing illustration in b&w for a children's book in the style of Beatrix Potter. \" + i,\n",
+    "        size=\"1024x1024\",\n",
+    "        quality=\"standard\",\n",
+    "        n=1,\n",
+    "      )\n",
+    "      print(response)\n",
     "    # Getting the URL of the generated image\n",
-    "    print(response)\n",
-    "    image_url = response.data[0].url\n",
-    "    print(f\"Generated Image URL: {image_url}\")\n",
+    "    # print(response)\n",
+    "      image_url = response.data[0].url\n",
+    "      print(f\"Generated Image URL: {image_url}\")\n",
     "\n",
     "# # Example usage\n",
     "# if __name__ == \"__main__\":\n",
